# distributed-task-coordinator

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_clients.sh  benchmark_shards.sh  benchmark_workers.sh  benchmark_workload.sh  results.csv  run_all.sh  run_benchmark.sh
coordinator/: coordinator.cpp
include/client/: client.hpp  types.hpp  workload_utils.hpp
include/config/: system_config.hpp
include/coordinator/: coordinator.hpp  types.hpp
include/lock_free/: spsc_queue.hpp
include/message/: message.hpp
include/net/: net_utils.hpp
include/router/: router.hpp  types.hpp
include/rpc/: client.hpp  server_connection.hpp
include/serialization/: buffer.hpp
include/task/: task.hpp
include/top/: top.hpp  types.hpp
include/utils/: utils.hpp
include/worker/: worker.hpp
lock_free/: spsc_queue.hpp
message/: message.hpp
net/: net_utils.cpp  net_utils.hpp
results/: results.csv
rpc/: client.cpp  client.hpp  server_connection.cpp  server_connection.hpp
serialization/: buffer.hpp
src/client/: client.cpp  main.cpp
src/coordinator/: coordinator.cpp  main.cpp
src/net/: net_utils.cpp
src/router/: main.cpp  router.cpp
src/rpc/: client.cpp  server_connection.cpp
src/top/: main.cpp  top.cpp
src/worker/: main.cpp  worker.cpp
task/: task.hpp
utils/: utils.hpp
worker/: worker.cpp
